# OpenIW4

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua  progcalc.bat
.github/workflows/: main.yml
lua/: lua.lua
source/: logo.xcf  openiw4-splash.xcf
src/: CMakeLists.txt
src/game/: CMakeLists.txt  defs.hpp  main.cpp  main.hpp  stdafx.hpp  version.hpp
src/game/CL/: CL.cpp  CL.hpp
src/game/Cbuf/: Cbuf.cpp  Cbuf.hpp
src/game/Cmd/: Cmd.cpp  Cmd.hpp
src/game/Com/: Com.cpp  Com.hpp  Memory.cpp  Memory.hpp  PhysicalMemory.cpp  PhysicalMemory.hpp
src/game/DB/: DB.cpp  DB.hpp
src/game/Dvar/: Dvar.cpp  Dvar.hpp
src/game/Huffman/: Huffman.cpp  Huffman.hpp
src/game/IWNet/: IWNet.cpp  IWNet.hpp
src/game/Images/: Images.cpp  Images.hpp
src/game/LSP/: LSP.cpp  LSP.hpp
src/game/Live/: Live.cpp  Live.hpp
src/game/MSG/: MSG.cpp  MSG.hpp
src/game/NET/: NET.cpp  NET.hpp
src/game/Party/: Party.cpp  Party.hpp
src/game/R/: R.cpp  R.hpp
src/game/Render/: Render.cpp  Render.hpp
src/game/Script/: StringList.cpp  StringList.hpp
src/game/Session/: Session.cpp  Session.hpp
src/game/Sys/: Sys.cpp  Sys.hpp
src/game/Unsorted/: Unsorted.cpp  Unsorted.hpp  Unsortred.cpp
src/game/Voice/: Voice.cpp  Voice.hpp
src/game/Win/: Win.cpp  Win.hpp
src/game/winapi/: winapi.cpp  winapi.hpp
src/game/window/: window.cpp  window.hpp
src/loader/: loader.cpp  loader.hpp
src/utils/memory/: memory.hpp
